# tree-sitter-scss

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  publish.yml
bindings/c/: tree-sitter-scss.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_scss/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSCSS/: scss.h
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: declarations.txt  examples.txt  selectors.txt  statements.txt
